# emi-re

./: README.md  pyproject.toml
src/emi_re/: __init__.py
src/emire/: __about__.py  __init__.py  extract.py  normalize.py
