[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emi-re"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "ftnext", email = "takuyafjp+develop@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/ftnext/emi-re#readme"
Issues = "https://github.com/ftnext/emi-re/issues"
Source = "https://github.com/ftnext/emi-re"

[tool.hatch.version]
path = "src/emi_re/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/emi_re tests}"

[tool.coverage.run]
source_pkgs = ["emi_re", "tests"]
branch = true
parallel = true
omit = [
  "src/emi_re/__about__.py",
]

[tool.coverage.paths]
emi_re = ["src/emi_re", "*/emi-re/src/emi_re"]
tests = ["tests", "*/emi-re/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
